--- a/wwwroot/.github/workflows/build.yml
+++ b/wwwroot/.github/workflows/build.yml
@@ -44,7 +44,9 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"vennapushekhar_vmartstore" /o:"vennapushekhar" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet clean
-          dotnet build --configuration Release
+        name: Build project
+        run: |
+           dotnet clean
+           dotnet build --configuration Release
 
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
